bat.bool1.sleepin.SleepIn.scala.error
Compilation error:
SleepIn:4: error: '{' expected but 'case' found.
 case((false,false))=>return(true)
 ^SleepIn:5: error: '}' expected but 'case' found.
  case((true, false))=> return(false)
  ^SleepIn:6: error: illegal start of definition
  case((true,true))=>return(true)
  ^SleepIn:7: error: illegal start of definition
  case((false, true))=>return(true)    
  ^SleepIn:10: error: eof expected but '}' found.
}
^